--- a/WebMusicPlayerAspNetCore/Views/_ViewImports.cshtml
+++ b/WebMusicPlayerAspNetCore/Views/_ViewImports.cshtml
@@ -4,3 +4,4 @@
 @using WebMusicPlayerAspNetCore.Models.ManageViewModels
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using WebMusicPlayerAspNetCore.Helpers
