--- a/WebMusicPlayerAspNetCore/Views/Shared/_Layout.cshtml
+++ b/WebMusicPlayerAspNetCore/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Upload" asp-action="Index">Upload Music</a></li>
+                    <li><a asp-area="" asp-controller="Music" asp-action="Index">My Musics</a></li>
                     <li><a asp-area="" asp-controller="Music" asp-action="Index">PlayList</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
